Added prompts for more photos

--- a/Photography.html
+++ b/Photography.html
@@ -263,7 +263,14 @@
                                         <div class="modal-footer">
                                             <h3 style="font-weight:bold;">Feelings</h3>
                                             <h4 style="font-style:italic">Spring 2024</h4>
-                                            <p>A brief but detailed description of the photograph.</p>
+                                            <p>Black and white film. Self developed.</p>
+                                            <p>
+                                                This was my first black and white film project and I wanted to experiment with controlled
+                                                lighting. I wrote some mysterious text with
+                                                my mouse and a smearing brush in MS Paint, then inverted it so it could be read in the reflection.
+                                                I placed my camera between one of the displays thats showing the text and an out of frame third
+                                                monitor thats being used as a key light. I love the mystery, the fuzzy retro feel, and the texture.
+                                            </p>
                                             <a href="./assets/feelings.png" target="_blank">Download</a>
                                             <hr class="modal-line">
                                             <button type="button" class="btn btn-primary modal-button" id="close3" data-dismiss="modal">Close</button>
@@ -290,7 +297,14 @@
                                         <div class="modal-footer">
                                             <h3 style="font-weight:bold;">Listening?</h3>
                                             <h4 style="font-style:italic">Spring 2024</h4>
-                                            <p>A brief but detailed description of the photograph.</p>
+                                            <p>Black and white film. Self developed.</p>
+                                            <p>
+                                                I was inspired by a shot from Ingmar Bergman's Persona to create a piece on AI using a mannequin to
+                                                represent this artificial figure. The individual speaking to someone whose not really there. 
+                                                The lighting and texture around the molded ring is the biproduct of
+                                                a happy accident as the film was overexposed and the only way to correct was to bring out these
+                                                super dark shades.
+                                            </p>
                                             <a href="./assets/listening.png" target="_blank">Download</a>
                                             <hr class="modal-line">
                                             <button type="button" class="btn btn-primary modal-button" id="close4" data-dismiss="modal">Close</button>
@@ -317,7 +331,13 @@
                                         <div class="modal-footer">
                                             <h3 style="font-weight:bold;">Calebs Not Here</h3>
                                             <h4 style="font-style:italic">Spring 2022</h4>
-                                            <p>A brief but detailed description of the photograph.</p>
+                                            <p>
+                                                Bourbon Street has a habit of bringing out the craziest parts of us. I have no idea where I took this 
+                                                photo after the 100 proof from several hours prior, but I remember my friend looking damn good in this
+                                                lighting and in an almost instinctive way I captured someone who simply was not him. Someone who
+                                                emerged from their conscience unshackled from credo and simply alive in this moment. Someone who is
+                                                either entirely transformed, or has finally allowed themselves to live as they are.
+                                            </p>
                                             <a href="./assets/Calebs_Not_Here.jpg" target="_blank">Download</a>
                                             <hr class="modal-line">
                                             <button type="button" class="btn btn-primary modal-button" id="close11" data-dismiss="modal">Close</button>
@@ -344,7 +364,10 @@
                                         <div class="modal-footer">
                                             <h3 style="font-weight:bold;">Edison Bulb in a Coffee Shop</h3>
                                             <h4 style="font-style:italic">Fall 2024</h4>
-                                            <p>A brief but detailed description of the photograph.</p>
+                                            <p>
+                                                The burnished copper cap and radiant hot wires for this retro Edison style bulb complement the warm hues of
+                                                this rather hipster coffee shop in college town Ames.
+                                            </p>
                                             <a href="./assets/Edison_Bulb_in_a_Coffee_Shop.jpg" target="_blank">Download</a>
                                             <hr class="modal-line">
                                             <button type="button" class="btn btn-primary modal-button" id="close12" data-dismiss="modal">Close</button>
@@ -371,7 +394,14 @@
                                         <div class="modal-footer">
                                             <h3 style="font-weight:bold;">Hotel New Orleans</h3>
                                             <h4 style="font-style:italic">Spring 2022</h4>
-                                            <p>A brief but detailed description of the photograph.</p>
+                                            <p>
+                                                The dulcet streets carried music and soul in its sweet boozy air. Neon lights flirted with our eyes 
+                                                dividing us amongst the ethereal hivemind of harmonious folk.
+                                            </p>
+                                            <p>
+                                                Like falling to a siren I was lost in its light. No longer there with my clique but rather one 
+                                                amongst a rabble of like minded travelers.
+                                            </p>
                                             <a href="./assets/Hotel_New_Orleans.jpg" target="_blank">Download</a>
                                             <hr class="modal-line">
                                             <button type="button" class="btn btn-primary modal-button" id="close13" data-dismiss="modal">Close</button>
@@ -398,7 +428,16 @@
                                         <div class="modal-footer">
                                             <h3 style="font-weight:bold;">Lincoln Street</h3>
                                             <h4 style="font-style:italic">Spring 2023</h4>
-                                            <p>A brief but detailed description of the photograph.</p>
+                                            <p>
+                                                The crew and I drove across the US from SC to IA over a week and in our last hurrah I decided we
+                                                could party in Chicago on St. Paddy's Friday. It'd be a crazy spot to end the trip and a cheap flight
+                                                back home for the two. None of us had ever been to Chicago.
+                                            </p>
+                                            <p>
+                                                After a long and rowdy night we found ourselves on a rooftop bar on Lincoln Street. The vibes were
+                                                right, the view was beautiful, the people great to talk to. I felt the energy and happiness in this
+                                                photo greatly captured our friendship.
+                                            </p>
                                             <a href="./assets/Lincoln_Street.jpg" target="_blank">Download</a>
                                             <hr class="modal-line">
                                             <button type="button" class="btn btn-primary modal-button" id="close18" data-dismiss="modal">Close</button>
