Revised About Me description

--- a/Home.html
+++ b/Home.html
@@ -44,8 +44,8 @@
                         <h2 class="text-white mb-4">About Me</h2>
                         <p class="text-white-50">
                             I'm a software developer, writer, and photographer from South Carolina born and raised. I love exploring the world, writing stories on its beautiful
-                            nuances, and hope to photograph the whole journey. In everything we create we put into it a little piece of us.
-                            I hope here you'll find both value and magnanimity in my lifes work.
+                            nuances, and hope to photograph the whole journey. Through my work in software I hope to develop technologies that truly make our world a better place,
+                            one line at a time.
                         </p>
                     </div>
                 </div>
