Revised more photo prompts

--- a/Photography.html
+++ b/Photography.html
@@ -100,8 +100,8 @@
                                                 Black and white film. Self developed.
                                             </p>
                                             <p>
-                                                A man in a suit drops change in a cup before a power plant, its pollution driving the climate
-                                                in a direction that will command him to the same fate. The viewers perspective
+                                                A man donates change to the hapless before a power plant; its pollution driving the 
+                                                climate in a direction that will command him to the same fate. The viewers perspective
                                                 solely on the change in frame, its temporary benefaction rendered still, with the plant out of 
                                                 focus.
                                             </p>
@@ -132,9 +132,9 @@
                                             <h3 style="font-weight:bold;">Asphalt Rain</h3>
                                             <h4 style="font-style:italic">Fall 2023</h4>
                                             <p>
-                                                I love the high contrast between lights and the night sky, its tones almost amplified following a
+                                                I love the high contrast between lights and the night, its tones almost amplified following a
                                                 light rain where I can pick up these colors in the moisture and puddles. The asphalt adds a
-                                                second dark vector to compliment the dark sky.
+                                                second dark vector to compliment the sky.
                                             </p>
                                             <a href="./assets/Asphalt_Rain.jpg" target="_blank">Download</a>
                                             <hr class="modal-line">
@@ -202,6 +202,9 @@
                                                 I find that in modern education we have exchanged the pursuit of knowledge for monetary
                                                 gain. This piece was inspired by the concept of acquiring a degree for money or a job for
                                                 the sake of money. The desire for enlightenment absent in the face of greed.
+                                            </p>
+                                            <p>
+                                                
                                             </p>
                                             <a href="./assets/Philistine.png" target="_blank">Download</a>
                                             <hr class="modal-line">
