Revised photo prompts

--- a/Photography.html
+++ b/Photography.html
@@ -199,12 +199,12 @@
                                             <h4 style="font-style:italic">Spring 2024</h4>
                                             <p>Black and white film. Self developed.</p>
                                             <p>
-                                                I find that in modern education we have exchanged the pursuit of knowledge for monetary
-                                                gain. This piece was inspired by the concept of acquiring a degree for money or a job for
-                                                the sake of money. The desire for enlightenment absent in the face of greed.
-                                            </p>
-                                            <p>
-                                                
+                                                Philistine: an individual that holds no value to culture or shared ideas. A complete materialist.
+                                                Appraising greed before humanity and capital gain before education. Manufactured all the same
+                                                under the press of tuition; the cost of learning too high to justify nill economic incentive.
+                                                Yet through this superficial fiat
+                                                distinction of intellectual superiority, profit can be just within reach. We can trade ourselves
+                                                for success. We can save the family for a dollar.
                                             </p>
                                             <a href="./assets/Philistine.png" target="_blank">Download</a>
                                             <hr class="modal-line">
@@ -270,7 +270,7 @@
                                             <p>
                                                 This was my first black and white film project and I wanted to experiment with controlled
                                                 lighting. I wrote some mysterious text with
-                                                my mouse and a smearing brush in MS Paint, then inverted it so it could be read in the reflection.
+                                                my mouse using a smearing brush in MS Paint, then inverted it so it could be read in the reflection.
                                                 I placed my camera between one of the displays thats showing the text and an out of frame third
                                                 monitor thats being used as a key light. I love the mystery, the fuzzy retro feel, and the texture.
                                             </p>
