More photo prompt edits

--- a/Photography.html
+++ b/Photography.html
@@ -268,11 +268,10 @@
                                             <h4 style="font-style:italic">Spring 2024</h4>
                                             <p>Black and white film. Self developed.</p>
                                             <p>
-                                                This was my first black and white film project and I wanted to experiment with controlled
-                                                lighting. I wrote some mysterious text with
-                                                my mouse using a smearing brush in MS Paint, then inverted it so it could be read in the reflection.
-                                                I placed my camera between one of the displays thats showing the text and an out of frame third
-                                                monitor thats being used as a key light. I love the mystery, the fuzzy retro feel, and the texture.
+                                                I hope that she can feel my warm spark tapping from the other side of this vanta glass.
+                                                Humming and thrumming to some strange tune singing to me that she's the last key to my humanity.
+                                                By all speculations unseen or expected, here and now, my touch is certain.
+                                                But if I've no hands to pinch or heart to kiss, then what is this?
                                             </p>
                                             <a href="./assets/feelings.png" target="_blank">Download</a>
                                             <hr class="modal-line">
@@ -470,7 +469,9 @@
                                                 I love bringing people together for a good laugh. To talk the talk, discuss shop,
                                                 or reflect. Food has this inviting magical ability to bring out the most
                                                 compassionate parts of us. Seeing the weights lift from those I love around me 
-                                                is an inspiration to do more for my community.
+                                                is an inspiration to do more for my community. In the presence of food I can see my
+                                                friends and family be more of themselves, and I can feel myself be a better friend, a 
+                                                better brother, and a better man.
                                             </p>
                                             <a href="./assets/chef.png" target="_blank">Download</a>
                                             <hr class="modal-line">
@@ -496,12 +497,15 @@
                                             />
                                         </div>
                                         <div class="modal-footer">
-                                            <h3 style="font-weight:bold;">Light Beneath the Concrete</h3>
+                                            <h3 style="font-weight:bold;">401k and a House</h3>
                                             <h4 style="font-style:italic">Fall 2023</h4>
                                             <p>
-                                                My first experiment into liminal spaces. I decided to take this concrete stairwell with
-                                                its linear wall mounted light by a glass window and manipulate the angle and post processed
-                                                colors in such a way to trick the viewer into making this feel like some unreal location.
+                                                Careful footsteps carry echoes in the concrete halls complemented with buzzing fluorescent lights.
+                                                I must look for the exit door somwhere in these cold porous halls. Salvation is in the 
+                                                structure. There are gaps
+                                                in the boundaries where the light bleeds in, do not take notice. There is an assurance that
+                                                my future is within these walls, that if I follow its rules I will find the exit door. Do not go into
+                                                the light. Trust the structure.
                                             </p>
                                             <a href="./assets/Concrete_Spaces.jpg" target="_blank">Download</a>
                                             <hr class="modal-line">
