Started work on Emotion Recognition blog

--- a/Software.html
+++ b/Software.html
@@ -50,7 +50,7 @@
                             <div class="small text-muted">Summer 2023 - Present</div>
                             <h2 class="card-title">Iryna</h2>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-                            <a class="btn btn-primary" href="./blog/post_template.html">Read more →</a>
+                            <a class="btn btn-primary">Coming Soon →</a>
                         </div>
                     </div>
                     <!-- Nested row for non-featured blog posts-->
@@ -64,19 +64,19 @@
                                     <div class="small text-muted">Summer 2020</div>
                                     <h2 class="card-title h4">Police Brutality Bot</h2>
                                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                                    <a class="btn btn-primary" href="./blog/post_template.html">Read more →</a>
+                                    <a class="btn btn-primary">Coming Soon →</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <!-- Blog post-->
                             <div class="card mb-4">
-                                <a href="#!"><img class="card-img-top" src="../assets/facialrec.png" alt="..." /></a>
+                                <a href="#!"><img class="card-img-top" src="/blog/emotion_recognition/facialrec.png" alt="..." /></a>
                                 <div class="card-body">
                                     <div class="small text-muted">Summer 2021</div>
-                                    <h2 class="card-title h4">Facial Recognition</h2>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                                    <a class="btn btn-primary" href="./blog/post_template.html">Read more →</a>
+                                    <h2 class="card-title h4">Emotion Recognition</h2>
+                                    <p class="card-text">An attempt to mathematically deduce emotions using facial recognition data.</p>
+                                    <a class="btn btn-primary" href="./blog/emotion_recognition.html">Read more →</a>
                                 </div>
                             </div>
                         </div>
