More Emotion Recognition revisions

--- a/Software.html
+++ b/Software.html
@@ -75,7 +75,7 @@
                                 <div class="card-body">
                                     <div class="small text-muted">Summer 2021</div>
                                     <h2 class="card-title h4">Emotion Recognition</h2>
-                                    <p class="card-text">An attempt to mathematically deduce emotions using facial recognition data.</p>
+                                    <p class="card-text">Mathematically deducing emotions using facial recognition data.</p>
                                     <a class="btn btn-primary" href="./blog/emotion_recognition.html">Read more →</a>
                                 </div>
                             </div>
