Fixing directory bugs

--- a/Software.html
+++ b/Software.html
@@ -45,7 +45,7 @@
                 <div class="col-lg-8 my-4">
                     <!-- Featured blog post-->
                     <div class="card mb-4">
-                        <a href="#!"><img class="card-img-top" src="../assets/Iryna.jpg" alt="ODU REU Team" /></a>
+                        <a href="#!"><img class="card-img-top" src="./assets/Iryna.jpg" alt="ODU REU Team" /></a>
                         <div class="card-body">
                             <div class="small text-muted">Summer 2023 - Present</div>
                             <h2 class="card-title">Iryna</h2>
@@ -59,7 +59,7 @@
                         <div class="col-lg-6">
                             <!-- Blog post-->
                             <div class="card mb-4">
-                                <a href="#!"><img class="card-img-top" src="../assets/botlogo.png" alt="..." /></a>
+                                <a href="#!"><img class="card-img-top" src="./assets/botlogo.png" alt="..." /></a>
                                 <div class="card-body">
                                     <div class="small text-muted">Summer 2020</div>
                                     <h2 class="card-title h4">Police Brutality Bot</h2>
