--- a/Writing.html
+++ b/Writing.html
@@ -45,7 +45,7 @@
                 <div class="col-lg-8 my-4">
                     <!-- Featured blog post-->
                     <div class="card mb-4">
-                        <a href="#!"><img class="card-img-top" src="../assets/houston.jpg" alt="ODU REU Team" /></a>
+                        <a href="#!"><img class="card-img-top" src="./assets" alt="ODU REU Team" /></a>
                         <div class="card-body">
                             <div class="small text-muted">Spring 2022 - Short Story</div>
                             <h2 class="card-title">One Shot to Houston</h2>
@@ -59,7 +59,7 @@
                         <div class="col-lg-6">
                             <!-- Blog post-->
                             <div class="card mb-4">
-                                <a href="#!"><img class="card-img-top" src="../assets/older_small.png" alt="..." /></a>
+                                <a href="#!"><img class="card-img-top" src="./assets/older_small.png" alt="..." /></a>
                                 <div class="card-body">
                                     <div class="small text-muted">Fall 2016 - Poetry</div>
                                     <h2 class="card-title h4">Growing Older</h2>
@@ -71,7 +71,7 @@
                         <div class="col-lg-6">
                             <!-- Blog post-->
                             <div class="card mb-4">
-                                <a href="#!"><img class="card-img-top" src="../assets/bliss_small.png" alt="..." /></a>
+                                <a href="#!"><img class="card-img-top" src="./assets/bliss_small.png" alt="..." /></a>
                                 <div class="card-body">
                                     <div class="small text-muted">Fall 2022 - Analysis</div>
                                     <h2 class="card-title h4">Consumption Symbiosis</h2>
