Fixing directory bugs

--- a/Software.html
+++ b/Software.html
@@ -71,7 +71,7 @@
                         <div class="col-lg-6">
                             <!-- Blog post-->
                             <div class="card mb-4">
-                                <a href="#!"><img class="card-img-top" src="/blog/emotion_recognition/facialrec.png" alt="..." /></a>
+                                <a href="#!"><img class="card-img-top" src="./blog/emotion_recognition/facialrec.png" alt="..." /></a>
                                 <div class="card-body">
                                     <div class="small text-muted">Summer 2021</div>
                                     <h2 class="card-title h4">Emotion Recognition</h2>
