--- a/Writing.html
+++ b/Writing.html
@@ -45,12 +45,12 @@
                 <div class="col-lg-8 my-4">
                     <!-- Featured blog post-->
                     <div class="card mb-4">
-                        <a href="#!"><img class="card-img-top" src="./assets" alt="ODU REU Team" /></a>
+                        <a href="#!"><img class="card-img-top" src="./assets/houston.jpg"/></a>
                         <div class="card-body">
                             <div class="small text-muted">Spring 2022 - Short Story</div>
                             <h2 class="card-title">One Shot to Houston</h2>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-                            <a class="btn btn-primary" href="./blog/post_template.html">Read more →</a>
+                            <a class="btn btn-primary">Coming Soon →</a>
                         </div>
                     </div>
                     <!-- Nested row for non-featured blog posts-->
@@ -64,7 +64,7 @@
                                     <div class="small text-muted">Fall 2016 - Poetry</div>
                                     <h2 class="card-title h4">Growing Older</h2>
                                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                                    <a class="btn btn-primary" href="./blog/post_template.html">Read more →</a>
+                                    <a class="btn btn-primary">Coming Soon →</a>
                                 </div>
                             </div>
                         </div>
@@ -76,7 +76,7 @@
                                     <div class="small text-muted">Fall 2022 - Analysis</div>
                                     <h2 class="card-title h4">Consumption Symbiosis</h2>
                                     <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                                    <a class="btn btn-primary" href="./blog/post_template.html">Read more →</a>
+                                    <a class="btn btn-primary">Coming Soon →</a>
                                 </div>
                             </div>
                         </div>
@@ -126,6 +126,6 @@
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="../js/scripts.js"></script>
+        <script src="./js/scripts.js"></script>
     </body>
 </html>
