--- a/Software.html
+++ b/Software.html
@@ -43,6 +43,7 @@
                 <!-- Blog entries-->
                 <div class="col-lg-8 my-4">
                     <!-- Featured blog post-->
+                     <!-- Compress featured blog image thumbnail to 1920x1080-->
                     <div class="card mb-4">
                         <a href="#!"><img class="card-img-top" src="./assets/Iryna.jpg" alt="ODU REU Team" /></a>
                         <div class="card-body">
