compressed assets on other pages

--- a/Writing.html
+++ b/Writing.html
@@ -44,7 +44,7 @@
                 <div class="col-lg-8 my-4">
                     <!-- Featured blog post-->
                     <div class="card mb-4">
-                        <a href="#!"><img class="card-img-top" src="./assets/houston.jpg"/></a>
+                        <a href="#!"><img class="card-img-top" src="./assets/houston_preview.png"/></a>
                         <div class="card-body">
                             <div class="small text-muted">Spring 2022 - Short Story</div>
                             <h2 class="card-title">One Shot to Houston</h2>
