--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 </div>
                 <!-- Project One Row-->
                 <div class="row gx-0 mb-5 mb-lg-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="./assets/writer.jpg" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="./assets/writer_preview.png" alt="..." /></div>
                     <div class="col-lg-6">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
@@ -87,7 +87,7 @@
                 </div>
                 <!-- Project Two Row-->
                 <div class="row gx-0 justify-content-center">
-                    <div class="col-lg-6"><img class="img-fluid" src="./assets/riverPerspective.jpg" alt="..." /></div>
+                    <div class="col-lg-6"><img class="img-fluid" src="./assets/riverPerspective_preview.png" alt="..." /></div>
                     <div class="col-lg-6 order-lg-first">
                         <div class="bg-black text-center h-100 project">
                             <div class="d-flex h-100">
