--- a/Photography.html
+++ b/Photography.html
@@ -23,6 +23,14 @@
                 <a class="navbar-brand" style="padding-left:1.5rem;" href="./Software.html">Software</a>
                 <a class="navbar-brand" style="padding-left:1.5rem;" href="./Writing.html">Writing</a>
                 <a class="navbar-brand" style="padding-left:1.5rem;" href="#page-top">Photography</a>
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    Dropdown link
+                </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item" href="#">Action</a>
+                    <a class="dropdown-item" href="#">Another action</a>
+                    <a class="dropdown-item" href="#">Something else here</a>
+                </div>
             </div>
         </nav>
         <!-- Page header -->
