working on mobile menu

--- a/Photography.html
+++ b/Photography.html
@@ -23,13 +23,17 @@
                 <a class="navbar-brand" style="padding-left:1.5rem;" href="./Software.html">Software</a>
                 <a class="navbar-brand" style="padding-left:1.5rem;" href="./Writing.html">Writing</a>
                 <a class="navbar-brand" style="padding-left:1.5rem;" href="#page-top">Photography</a>
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Dropdown link
+                <a class="navbar-brand" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+                    </svg>
+                    Menu
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                    <a class="dropdown-item" href="#">Action</a>
-                    <a class="dropdown-item" href="#">Another action</a>
-                    <a class="dropdown-item" href="#">Something else here</a>
+                <div class="dropdown-menu" >
+                    <a class="dropdown-item" href="./index.html">Home</a>
+                    <a class="dropdown-item" href="./Software.html">Software</a>
+                    <a class="dropdown-item" href="./Writing.html">Writing</a>
+                    <a class="dropdown-item" href="./Photography.html">Photography</a>
                 </div>
             </div>
         </nav>
