Patching mobile menu

--- a/Photography.html
+++ b/Photography.html
@@ -24,7 +24,7 @@
                 <a class="navbar-brand desktop-menu" href="./Writing.html">Writing</a>
                 <a class="navbar-brand desktop-menu" href="#page-top">Photography</a>
                 <div class="col-lg-4 col-md-12 mb-lg-0 mobile-menu">
-                    <a class="navbar-brand" href="#" id="dropdown-link">
+                    <a class="navbar-brand" id="dropdown-link">
                         <svg xmlns="http://www.w3.org/2000/svg" style="margin-bottom:0.2rem;" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                             <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
                         </svg>
