mobile navigation implemented

--- a/Photography.html
+++ b/Photography.html
@@ -34,7 +34,8 @@
                         <a class="dropdown-item" href="./index.html">Home</a>
                         <a class="dropdown-item" href="./Software.html">Software</a>
                         <a class="dropdown-item" href="./Writing.html">Writing</a>
-                        <a class="dropdown-item" href="./Photography.html">Photography</a>
+                        <a class="dropdown-item" href="#page-top">Photography</a>
+                        <a class="dropdown-item" href="#contact">Contact Info</a>
                     </div>
                 </div>
             </div>
