--- a/Writing.html
+++ b/Writing.html
@@ -19,10 +19,25 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
             <div class="container px-4 px-lg-5">
-                <a class="navbar-brand" href="./index.html">Home</a>
-                <a class="navbar-brand" href="./Software.html">Software</a>
-                <a class="navbar-brand" href="#page-top">Writing</a>
-                <a class="navbar-brand" href="./Photography.html">Photography</a>
+                <a class="navbar-brand desktop-menu" href="./index.html">Home</a>
+                <a class="navbar-brand desktop-menu" href="./Software.html">Software</a>
+                <a class="navbar-brand desktop-menu" href="#page-top">Writing</a>
+                <a class="navbar-brand desktop-menu" href="./Photography.html">Photography</a>
+                <div class="col-lg-4 col-md-12 mb-lg-0 mobile-menu">
+                    <a class="navbar-brand" id="dropdown-link">
+                        <svg xmlns="http://www.w3.org/2000/svg" style="margin-bottom:0.2rem;" width="16" height="16" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5m0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5"/>
+                        </svg>
+                        Menu
+                    </a>
+                    <div class="dropdown-menu" id="dropdown-menu">
+                        <a class="dropdown-item" href="./index.html">Home</a>
+                        <a class="dropdown-item" href="./Software.html">Software</a>
+                        <a class="dropdown-item" href="#page-top">Writing</a>
+                        <a class="dropdown-item" href="./Photography.html">Photography</a>
+                        <a class="dropdown-item" href="#contact">Contact Info</a>
+                    </div>
+                </div>
             </div>
         </nav>
         <!-- Page header -->
