Removed Lorum Ipsum

--- a/Software.html
+++ b/Software.html
@@ -64,7 +64,9 @@
                         <div class="card-body">
                             <div class="small text-muted">Summer 2023 - Present</div>
                             <h2 class="card-title">Iryna</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
+                            <p class="card-text">Still editing the blog! Check out the Github 
+                                <a href="https://github.com/adammartin13/Iryna-Public" target="_blank">ReadME!</a>
+                            </p>
                             <a class="btn btn-primary">Coming Soon →</a>
                         </div>
                     </div>
@@ -78,7 +80,9 @@
                                 <div class="card-body">
                                     <div class="small text-muted">Summer 2020</div>
                                     <h2 class="card-title h4">Police Brutality Bot</h2>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
+                                    <p class="card-text">Still editing the blog! Check out the Github 
+                                        <a href="https://github.com/adammartin13/Police-Brutality-Bot" target="_blank">ReadME!</a>
+                                    </p>
                                     <a class="btn btn-primary">Coming Soon →</a>
                                 </div>
                             </div>
