--- a/Writing.html
+++ b/Writing.html
@@ -63,7 +63,7 @@
                         <div class="card-body">
                             <div class="small text-muted">Spring 2022 - Short Story</div>
                             <h2 class="card-title">One Shot to Houston</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
+                            <p class="card-text">Finishing the Software blogs first, check back later!</p>
                             <a class="btn btn-primary">Coming Soon →</a>
                         </div>
                     </div>
@@ -77,7 +77,7 @@
                                 <div class="card-body">
                                     <div class="small text-muted">Fall 2016 - Poetry</div>
                                     <h2 class="card-title h4">Growing Older</h2>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
+                                    <p class="card-text">Finishing the Software blogs first, check back later!</p>
                                     <a class="btn btn-primary">Coming Soon →</a>
                                 </div>
                             </div>
@@ -89,7 +89,7 @@
                                 <div class="card-body">
                                     <div class="small text-muted">Fall 2022 - Analysis</div>
                                     <h2 class="card-title h4">Consumption Symbiosis</h2>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
+                                    <p class="card-text">Finishing the Software blogs first, check back later!</p>
                                     <a class="btn btn-primary">Coming Soon →</a>
                                 </div>
                             </div>
